# forth

./: CMakeLists.txt
src/: debug_helpers.c  debug_helpers.h  eval.c  eval.h  eval_from_file.c  eval_from_file.h  main.c  util.c  util.h
test/: minctest.h  test_main.c
